<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/storage">
        <menu>
            <item android:title="@string/my_files"
                android:icon="@drawable/ic_baseline_folder_24"/>
            <item android:title="@string/shared"
                android:icon="@drawable/ic_baseline_people_alt_24"/>
            <item android:title="@string/starred"
                android:icon="@drawable/ic_baseline_star_24"/>
            <item android:title="@string/recent"
                android:icon="@drawable/ic_baseline_access_time_24"/>
            <item android:title="@string/back_up"
                android:icon="@drawable/ic_baseline_backup_24"/>
        </menu>
    </item>

    <item android:title="@string/app">
        <menu>
            <item android:title="@string/settings"
                android:id="@+id/settings"
                android:icon="@drawable/ic_baseline_settings_applications_24"/>
            <item android:title="@string/log_out"
                android:id="@+id/logout"
                android:icon="@drawable/ic_baseline_power_settings_new_24"/>
        </menu>
    </item>

</menu>